--- a/templates/question3.html
+++ b/templates/question3.html
@@ -11,7 +11,7 @@
     <body>
         <div class="container">
             <div class="jumbotron">
-                <h1>Margera Interview</h1>
+                <h1>Weather-API</h1>
             </div>
             <div> 
                 <h3> 3) Get the top n locations based on each available metric where n is a parameter given to the API call: </h3>
