--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <body>
         <div class="container">
             <div class="jumbotron">
-                <h1>Margera Interview - George Christodoulou</h1>
+                <h1>Weather API - George Christodoulou</h1>
             </div>
             <div> 
                 <h3>1) List the latest forecast for each location for every day: </h3>
