--- a/templates/question2.html
+++ b/templates/question2.html
@@ -11,7 +11,7 @@
     <body>
         <div class="container">
             <div class="jumbotron">
-                <h1>Margera Interview</h1>
+                <h1>Weather-API</h1>
             </div>
             <div> 
                 <h3> 2) List the average the_temp of the last 3 forecasts for each location for every day: </h3>
